--- a/pamphlet2019.tex
+++ b/pamphlet2019.tex
@@ -971,7 +971,7 @@
 		\item[もっちー] 文学部 魔剤愛飲家. 座右の銘は「強さは肉と薬が与えてくれる. 」
 		\end{description}
 		\end{itembox}
-
+\small
 		\begin{multicols}{2}
 		\begin{description}
 		\item[やくざ] 今回は1回生の皆さんに集まっていただきました. 事前に母校の京大志望の後輩から「熊野寮について気になること」を聞き取っているので, そのテーマをもとにお喋りしましょう, という企画ですね.
@@ -1296,8 +1296,8 @@
 		\item[ 一同 ]楽しかった. おつかれ!
 		\end{description}
 		\textbf{---この後2時間食堂でお喋りし, 皆が寝たのは早朝5時を過ぎた頃でした. }
-
 \end{multicols}
+\normalsize
 
 		\subsection{大学生活を送る上でちょっと考えてほしいこと}
 
@@ -1306,7 +1306,7 @@
 		\begin{multicols}{2}
 
 		\begin{description}
-
+\small
 		\item[ T : ] 何から始めたらいいかわからないし, とりあえず切り口としてコンパの話から始めようか.
 
 		\item[ Y : ] コンパで, これよくないなっていう出来事を見聞きしたことはありますか?
@@ -1382,9 +1382,10 @@
 		\item[ J : ] 悪意のないタイプのハラスメントをしうる. 体触られたりした時に, それが悪意をもって触ってきているのであれば, 事後的にであれ拒否しやすいけれども, 仲いいよねっていう証として肩を触られた時に怒ることは難しいよね. それセクハラだよって指摘された時に, いや, 嫌がる事をしたかったわけではないという反発はしない方がいい. あなたに悪意があると言っているわけではなくて, 結果的にセクハラを生んでいるよ, そういう指摘だと思って受け止めてほしい.
 
 		\item[ K : ] そうだね.
-
+\normalsize
 		\end{description}
 		\end{multicols}
+\normalsize
 		\begin{tcolorbox}
 		POINT
 		\begin{itemize}
@@ -1458,7 +1459,10 @@
   結構ざっくりした話になるのであまり正確なことは言ってませんし, 何より締め切り間際に深夜に書いているので結構間違いもあると思いますがご容赦ください. 
 
     \subsection{シュレーディンガーの猫}
-    シュレーディンガーの猫について聞いたことくらいはあると思います. 簡単に説明すると, 箱の中に猫と放射性元素, 毒ガスを放出できる放射線検知器を入れておきます. 箱の中見えません. 一定時間経過後, 箱の中では確率$ 1/2 $ で放射性元素は崩壊し, 放射線を出します. このとき, 検知器が作動し毒ガスが箱の中に充満し猫は残念なことにその生涯を終えることになります. しかし, 箱の中が見えないのでフタを開けるまでは猫の生死はわかりません. このとき, 猫は生きている状態と死んでいる状態の両方の状態にある, と説明されます. この猫のことをシュレーディンガーの猫と言います. そんなアホなと思うかもしれませんが, 量子論と呼ばれる物理学の分野ではこれが成立します. ちなみに箱を開けるときは換気を十分にするか防毒マスクをつけないと自分も巻き添えになりうるのでお気をつけください.
+    
+    \emph{---箱の中の猫は生きているのか? 死んでいるのか? 誰にも判らない 蓋を取るまでは}
+
+    シュレーディンガーの猫について聞いたことくらいはあると思います. 簡単に説明すると, 箱の中に猫と放射性元素, 毒ガスを放出できる放射線検知器を入れておきます. 箱の中見えません. 一定時間経過後, 箱の中では確率$ 1/2 $ で放射性元素は崩壊し, 放射線を出します. このとき, 検知器が作動し毒ガスが箱の中に充満し猫は残念なことにその生涯を終えることになります. しかし, 箱の中が見えないのでフタを開けるまでは猫の生死はわかりません. これは, 猫は生きている状態と死んでいる状態の両方の状態にある, と説明されます. この猫のことをシュレーディンガーの猫と言います. そんなアホなと思うかもしれませんが,  量子論と呼ばれる物理学の分野ではこれが成立します. ちなみに箱を開けるときは換気を十分にするか防毒マスクをつけないと自分も巻き添えになりうるのでお気をつけください.
 
     さて, 誰が好きで猫をこんな酷い目に合わせようと思うでしょうか. ちなみに私自身は猫アレルギーなので別に絶滅してもらっても構わないとは思いますが, そう思う人はきっと少数派なのでここは多数派に従って量子力学的に猫を救出する方法を考察してみます. その上で猫は可愛い.
 
@@ -1471,7 +1475,7 @@
     \[
     \| \psi \|^2 := \braket{\psi | \psi}
     \]
-    で定義します. $ \bra{\cdot} $ は\textbf{ブラ}といいます. ケットと合わせてブラケット(bracket: 括弧の意)です. また, 状態を表すベクトルは大きさが1であること, つまり$ \|\mathrm{alive}\|^2 = \braket{\mathrm{alive}|\mathrm{alive} } = 1 $ を要求します. 死亡状態dead も同様のことが成り立ちます. 同時に成り立たない状態は実現しないので, $ \braket{\mathrm{alive}|\mathrm{dead} } = \braket{\mathrm{dead}|\mathrm{alive} }  =0$ が成り立ちます. 以上の計算法則を用いて, 生きている確率と死んでいる確率はどちらも
+    で定義します. $ \bra{\cdot} $ は\textbf{ブラ}といいます. ケットと合わせてブラケット(bracket: 括弧の意)です. このブラケット$ \braket{\cdot | \cdot } $ でブラとケットの内積を表します. また, 状態を表すベクトルは大きさが1であること, つまり$ \|\mathrm{alive}\|^2 = \braket{\mathrm{alive}|\mathrm{alive} } = 1 $ を要求します. 死亡状態dead も同様のことが成り立ちます. 同時に成り立たない状態は実現しないので, $ \braket{\mathrm{alive}|\mathrm{dead} } = \braket{\mathrm{dead}|\mathrm{alive} }  =0$ が成り立ちます. 以上の計算法則を用いて, 生きている確率と死んでいる確率はどちらも
     \[
     | \braket{\psi | \mathrm{alive} } | ^2 = | \braket{\psi | \mathrm{dead} } |^2= \frac{1}{2}
     \]
@@ -1480,14 +1484,14 @@
     要するにとりあえず猫はこのままでは殺されてしまいます. ここから救出の算段を立てます.
 
     \subsection{時間を止める魔法}
-    量子論には時間を止める方法が存在します. \textbf{量子Zeno効果}と呼ばれる現象を用います. Zeno効果の由来はZeno(ゼノン)のパラドックスですね, 「飛んでる矢は止まってる」とか「見つめてる鍋は煮立たない」とかそういうやつです. 量子Zeno効果とは「連続測定されている量子系は時間発展しない」現象です. 見つめられると動けなくなるわけです. 語彙力の足りないラブソングみたいなもんです.
+    量子論には時間を止める魔法が存在します. この魔法は\textbf{量子Zeno効果}と呼ばれています. Zeno効果の名前の由来はZeno(ゼノン)のパラドックスですね, 「飛んでる矢は止まってる」とか「見つめてる鍋は煮立たない」とかそういうやつです. さて, 量子Zeno効果とは「連続測定されている量子系は時間発展しない」現象です. 見つめられると動けなくなる, つまりは語彙力の足りないラブソングみたいなもんです.
 
-    これを定式化します. 簡単に説明するのは不可能なので, よくわからんって人は諦めて次節まで読み飛ばしてください.
+    このZeno効果を定式化します. 簡単に説明するのは不可能なので, よくわからんって人は諦めて次節まで読み飛ばしてください.
 
     \subsubsection{射影測定によるZeno効果の定式化}
-    $ \mathscr{H} $ をヒルベルト空間とし, $ \psi (t) \in \mathscr{H} $ とします. さらに系の初期状態を$ \psi_{0} := \psi (0)  $とし,$H$ を$ \mathscr{H} $ 上に作用するハミルトニアンとします. このとき,  系の時間発展は$ \psi (t) = e^{-iHt}  \psi_{0}  $と表せます. ちなみに$ \hbar = 1 $ となるような単位系を用いています.
+    $ \mathscr{H} $ をヒルベルト空間とし, $ \psi (t) \in \mathscr{H} $ とします. さらに系の初期状態を$ \psi_{0} := \psi (0)  $とし, $H$ を$ \mathscr{H} $ 上に作用するハミルトニアンとします. このとき,  系の時間発展は$ \psi (t) = e^{-iHt}  \psi_{0}  $と表せます. ちなみに$ \hbar = 1 $ となるような単位系を用いています.
 
-    ここまで準備したところで時間を止める本題です. 「時間が止まる」というのは, 「一定時間経過した後も最初と同じ状態のままである」と言い換えることが出来ます. 上の節で言った通り, $  \tau $ だけ時間発展した後に初期状態となる確率\footnote{生存確率という} $ p(\tau) $ は,
+    ここまで準備したところで時間を止める本題です. 「時間が止まる」というのは, 「一定時間経過した後も最初と同じ状態のままである」と言い換えることが出来ます. 上の節で言った通り, $  \tau $ だけ時間発展した後に初期状態となる確率\footnote{「初期状態が生き残る」という意味でこの確率を生存確率(survival probability)という} $ p(\tau) $ は,
     \[
     p(\tau) := | \braket{\psi_{0} | \psi (\tau )} | ^2 = | \braket{\psi_{0} |  e^{-iH\tau}  \psi_{0}}| ^2
     \]
@@ -1511,16 +1515,16 @@
     \subsection{猫救出作戦}
     箱に閉じ込めた猫の初期状態を$ \ket{\psi_{0}} = \ket{\mathrm{alive}} $ とします. ここで $ \ket{\mathrm{dead}} $ を初期状態に選ぶと大変ヤバイことになります.
 
-    以下では計算はしませんが, 直観的には猫の状態を測定し続ければZeno効果により猫の状態は変化しないことになり, したがって猫は死にません. つまり\emph{シュレーディンガーの猫を救出するには箱に覗き窓をつけて猫を眺め続ければいい}ということになります. なんだ, 長々計算した割に簡単な結果でしたね.
+    以下では計算はしませんが, 直観的には「猫の状態を測定し続ければZeno効果により猫の状態は変化しない」ことになり, したがって猫は死にません. つまり\emph{シュレーディンガーの猫を救出するには箱に覗き窓をつけて猫を眺め続ければいい}ということになります. なんだ, 長々計算した割に簡単な結果でしたね.
 
-    \subsection{まともなまとめ}
-    以上の議論を素朴に信じると, 猫が死なないということは放射性元素が崩壊しないことを意味します. 猫を眺めることで元素の崩壊を止められるなんてありえるんでしょうか?
+    \subsection{まとめ}
+    今までの議論を素朴に信じると, 猫が死なないということは放射性元素が崩壊していないことを意味します. 箱の中の猫を眺めることで元素の崩壊を止められるなんてありえるんでしょうか?
 
-    ---もちろん, そんなことはありません. 猫は死ぬときは死にます. 箱に覗き窓をつけたところで, 確率$ 1/2 $ で猫の断末魔を目の当たりにするだけです. 多分トラウマになるのでやらないほうがいいと思います. なんでこんなパラドックスが起きるのか, それはミクロな物理学である量子論をマクロな系(猫)に適用したことに原因があります. 見つめられたら動けなくなるというのは, 確かにラブソングの中の美人(またはイケメン)くらいしか出来ないようです. もしくはメデューサ.
+    ---もちろん, そんなことはありません. 猫は死ぬときは死にます. 箱に覗き窓をつけたところで, 確率$ 1/2 $ で猫の断末魔を目の当たりにするだけです. 多分トラウマになるのでやらないほうがいいと思います. なんでこんなパラドックスが起きるのか, それはミクロな世界の物理学である量子論を安易にマクロな系(猫)に適用したことに原因があります. 見つめられたら動けなくなるというのは, 確かにラブソングの中の美人(またはイケメン)くらいしか出来ないようです. もしくはメデューサ.
 
-    実際, 量子論には色々とデリケートな問題がついて回ります. Zeno効果にも実はまだまだ色々と条件があるし, シュレーディンガーの猫そのものも実はそんなに単純な話じゃなかったりします. こういう問題は難しいですが, これからの技術, 例えば量子情報などを支える重要な理論です. もし何か興味があったら大学で勉強してみてください. その土壌が京都大学にはあります.
+    実際, 量子論には色々とデリケートな問題がついて回ります. Zeno効果にも実はまだまだ色々と条件があるし, シュレーディンガーの猫そのものも実はそんなに単純な話じゃなかったりします. こういう問題は難しいですが, これからの技術, 例えば量子情報などを支える重要な理論における問いになっています. もし興味があったら大学で勉強してみてください. その土壌が京都大学にはあります.
 
-    結論, 猫を助けたければ箱の中に入れなきゃいい.
+    \emph{結論, 猫を助けたければ箱の中に入れなきゃいい.}
 
 		\rightline{(文: まつたけ)}
 
@@ -1747,7 +1751,7 @@
 		私は長年熊野寮に住んできた身として, 様々な議論に参加し, 様々な議論の成り行きを観察してきました. 以下のお話とまとめは, これまでに私が様々な議論を観察してきた結果得た知見$ \cdot $ 経験則を基に, 4割の真面目さと6割のおふざけで書いたものです. 以下の文章は, お話し, 論者の分類まとめ, あとがき, 注(読者にとってあまりなじみのないと思われる用語の解説) の順で構成されています\footnote{編者注: 注はレイアウトの都合で全て脚注とした. したがって, 注は(この注のように)各ページでその都度解説されている}. お話しには後ろのまとめに分類されているすべてのタイプの論者が登場します. お話しの途中に書いてあるカッコ内の記述がまとめの分類に対応しています. 合わせてお楽しみください.
 
 		\begin{multicols}{2}
-
+\small
 		\subsection{---熊野寮内のとある議論の記録}
 		\small
 		\emph{注) 以下の話は架空の話です. 実在するいかなる組織$ \cdot $ 団体$ \cdot $ 人物に一切の関係がない...わけがないですが, 誰かを貶める意図はありません. }
