Updates from Overleaf

--- a/pamphlet2019.tex
+++ b/pamphlet2019.tex
@@ -1460,7 +1460,7 @@
 
     \subsection{シュレーディンガーの猫}
     
-    \emph{---箱の中の猫は生きているのか? 死んでいるのか? 誰にも判らない 蓋を取るまでは}
+   
 
     シュレーディンガーの猫について聞いたことくらいはあると思います. 簡単に説明すると, 箱の中に猫と放射性元素, 毒ガスを放出できる放射線検知器を入れておきます. 箱の中見えません. 一定時間経過後, 箱の中では確率$ 1/2 $ で放射性元素は崩壊し, 放射線を出します. このとき, 検知器が作動し毒ガスが箱の中に充満し猫は残念なことにその生涯を終えることになります. しかし, 箱の中が見えないのでフタを開けるまでは猫の生死はわかりません. これは, 猫は生きている状態と死んでいる状態の両方の状態にある, と説明されます. この猫のことをシュレーディンガーの猫と言います. そんなアホなと思うかもしれませんが,  量子論と呼ばれる物理学の分野ではこれが成立します. ちなみに箱を開けるときは換気を十分にするか防毒マスクをつけないと自分も巻き添えになりうるのでお気をつけください.
 
@@ -1522,7 +1522,7 @@
 
     ---もちろん, そんなことはありません. 猫は死ぬときは死にます. 箱に覗き窓をつけたところで, 確率$ 1/2 $ で猫の断末魔を目の当たりにするだけです. 多分トラウマになるのでやらないほうがいいと思います. なんでこんなパラドックスが起きるのか, それはミクロな世界の物理学である量子論を安易にマクロな系(猫)に適用したことに原因があります. 見つめられたら動けなくなるというのは, 確かにラブソングの中の美人(またはイケメン)くらいしか出来ないようです. もしくはメデューサ.
 
-    実際, 量子論には色々とデリケートな問題がついて回ります. Zeno効果にも実はまだまだ色々と条件があるし, シュレーディンガーの猫そのものも実はそんなに単純な話じゃなかったりします. こういう問題は難しいですが, これからの技術, 例えば量子情報などを支える重要な理論における問いになっています. もし興味があったら大学で勉強してみてください. その土壌が京都大学にはあります.
+    実際, 量子論には色々とデリケートな問題がついて回ります. Zeno効果にも実はまだまだ色々と条件があるし, シュレーディンガーの猫そのものも実はそんなに単純な話じゃなかったりします. こういう問題は難しいですが, これからの技術, 例えば量子情報などを支える理論における重要な問いになっています. もし興味があったら大学で勉強してみてください. その土壌が京都大学にはあります.
 
     \emph{結論, 猫を助けたければ箱の中に入れなきゃいい.}
 
