--- a/pamphlet-converter/pamphlet2019.tex
+++ b/pamphlet-converter/pamphlet2019.tex
@@ -674,7 +674,7 @@
 もちろん, そもそも組織間の交渉なので, 寮自治会の立場を述べるのであれば, 個人が名乗る必要がないということでもあります.
 
 		\subsection{確約の引き継ぎ}
-		確約書は厚生担当副学長の署名によって結ばれており, 形式的には副学長個人の寮に対する約束となっています. しかし, 「熊野寮自治会と京都大学の基本確約」(\pageref{page:確約}頁参照)とあるように, 本来的に確約は組織間の約束です. 例えば担当者(任期2年の副学長)が交代したからといって, 大学と自治会の約束がいちいち白紙に戻っては困ります. その為に, 副学長が交代しても引継ぎが自動的に, 確実になされるよう, 「次期以降の学生担当理事, 厚生補導担当副学長に引継ぐ. 」という条文が定められています.
+		確約書は厚生担当副学長の署名によって結ばれており, 形式的には副学長個人の寮に対する約束となっています. しかし, 「熊野寮自治会と京都大学の基本確約」とあるように, 本来的に確約は組織間の約束です. 例えば担当者(任期2年の副学長)が交代したからといって, 大学と自治会の約束がいちいち白紙に戻っては困ります. その為に, 副学長が交代しても引継ぎが自動的に, 確実になされるよう, 「次期以降の学生担当理事, 厚生補導担当副学長に引継ぐ. 」という条文が定められています.
 
 		ちなみに現在は, 当局の責任者として川添信介副学長が寮自治会と確約を結んでいます.
 
@@ -682,8 +682,6 @@
 		当事者(寮生は勿論, 今後入寮しうる京大生, その他関係者など誰でも) がすべて自由に参加できる, 公開の交渉形態です. 学内の大教室や寮食堂などで開かれてきました.
 
 		例えば対照的に, 少人数の交渉形態, つまり寮自治会の代表者数名だけが参加できる協議の場というのはどうでしょうか. 経済的に苦しくてアルバイトで忙しいため自治会の交渉事に中心的に参加できていない者や, 入寮したばかりで確約などの詳しい知識が無かったりする者など, 「自分の家のことが協議される場に参加したい」という思いは皆同じです. すべての当事者(特に居住している寮生) には協議$ \cdot $ 意思決定の場に参加する権利があると考え, この形態で交渉することが条文でも定められています. 団体交渉という形態を拒否すること自体も確約違反なのです.
-
-		\label{page:確約}
 
 		\begin{shadebox}
 
@@ -874,7 +872,6 @@
 
 	\section{寮生の1日}
 	---色々な寮生の1日を調べてみました. 調べなきゃよかったと思いました.
-	\begin{multicols}{3}
 			%\subsubsection{理学部1回生S}
 			%\begin{description}
 			%\item[ 7:00] 起床, 寮食(朝)を食べる
@@ -947,8 +944,6 @@
 			\item[26:00] 就寝
 			\end{description}
 
-			\end{multicols}
-
 			文学部のSさん, 「遊ぶんがくぶ」などと揶揄されるもどこ吹く風, 京大オケと教職課程で超多忙なよう. 実はこの原稿もかなりギリギリに大急ぎで提出してもらいました. レポートで忙しいのにありがとう. というかこのスケジュールでよくちゃんと生きてるな. 一番右, 大学院工学研究科のMさんもそれなりにハードな生活のよう. そもそも桂キャンパスに通学するのが結構体力を使うのだとか. ちなみに行きと帰りで所要時間が異なるのは道路が夜の方がすいているためだそう. 「理論系なので基本的にデスクワークだし, 実験系と違ってコアタイムなどの拘束がない分楽だと思います」は本人の弁. そして中央の人間健康科学科Mさん. 18時は5限の終わる時間なのですが大丈夫でしょうか. 「夜は寝るもの」という常識からも解き放たれた生活を送っているようです.
 
 			このように, 寮生それぞれの生活リズムで生きています. もちろん,周りに寝ている人がいる場合は少し静かにするなどの配慮は必要です. お互いの生活習慣に理解を持ちながら, いい寮生活を送ってくださいね.
@@ -959,7 +954,6 @@
 	\setcounter{footnote}{0}
 
 		\subsection{1回生座談会}
-    \label{page:座談会}
 
 		\begin{itembox}[l]{\bf 参加者}
 		\begin{description}
@@ -972,7 +966,6 @@
 		\end{description}
 		\end{itembox}
 \small
-		\begin{multicols}{2}
 		\begin{description}
 		\item[やくざ] 今回は1回生の皆さんに集まっていただきました. 事前に母校の京大志望の後輩から「熊野寮について気になること」を聞き取っているので, そのテーマをもとにお喋りしましょう, という企画ですね.
 		\item[ 一同 ] いえーい.
@@ -1296,15 +1289,12 @@
 		\item[ 一同 ]楽しかった. おつかれ!
 		\end{description}
 		\textbf{---この後2時間食堂でお喋りし, 皆が寝たのは早朝5時を過ぎた頃でした. }
-\end{multicols}
 \normalsize
 
 		\subsection{大学生活を送る上でちょっと考えてほしいこと}
 
 		 入寮パンフにセクハラやハラスメントの話を載せたいよねということで, 座談会をすることにしました. 高校までの学校の授業では教えないし, 特にそういうこと考えずに過ごしてきた人も多いだろうから, 少し考えてほしいな, と. 会社のセクハラ対応ガイドラインみたいなのって, あれしちゃだめこれしちゃ駄目って禁止事項が羅列されています. でもそれはかえって, それさえしなければいいんでしょという思考停止を生むと思います. そうではなくて, 今後大学生活を送っていく上での問題提起として読んでください.
 		 
-		\begin{multicols}{2}
-
 		\begin{description}
 \small
 		\item[ T : ] 何から始めたらいいかわからないし, とりあえず切り口としてコンパの話から始めようか.
@@ -1384,7 +1374,6 @@
 		\item[ K : ] そうだね.
 \normalsize
 		\end{description}
-		\end{multicols}
 \normalsize
 		\begin{tcolorbox}
 		POINT
@@ -1750,7 +1739,6 @@
 
 		私は長年熊野寮に住んできた身として, 様々な議論に参加し, 様々な議論の成り行きを観察してきました. 以下のお話とまとめは, これまでに私が様々な議論を観察してきた結果得た知見$ \cdot $ 経験則を基に, 4割の真面目さと6割のおふざけで書いたものです. 以下の文章は, お話し, 論者の分類まとめ, あとがき, 注(読者にとってあまりなじみのないと思われる用語の解説) の順で構成されています\footnote{編者注: 注はレイアウトの都合で全て脚注とした. したがって, 注は(この注のように)各ページでその都度解説されている}. お話しには後ろのまとめに分類されているすべてのタイプの論者が登場します. お話しの途中に書いてあるカッコ内の記述がまとめの分類に対応しています. 合わせてお楽しみください.
 
-		\begin{multicols}{2}
 \small
 		\subsection{---熊野寮内のとある議論の記録}
 		\small
@@ -1882,15 +1870,13 @@
 		15時間に及ぶ議論の結論は「継続議論」.
 
 		寮生たちの多くは疲れ果て, 彼らの中には議論を長引かせた全ての論者に対する憎悪が渦巻いていた. しかし彼らの中には, 議論を堪能した, という満足感を自覚する者もあった. 満足感を自覚できない者も, 妙に安らかに昼夜逆転の眠りに就くのであった.
-
-		\end{multicols}
 		\normalsize
 
 		\subsection{論者$ \cdot $ 主張タイプの分類まとめ}
 
 			\subsubsection{第一章: 議論の方法論による分類}
 			\begin{description}
-			\item[1. パリサイ派] \footnote{古代ユダヤ教内グループの一. 紀元前2世紀$ \sim $ 紀元1世紀頃に活動. 新約聖書の福音書にイエスを敵対視する保守勢力として登場. イエスに「偽善な律法学者」と呼ばれ, 非難された.} --律法原理主義型
+			\item[1. パリサイ派 \footnote{古代ユダヤ教内グループの一. 紀元前2世紀$ \sim $ 紀元1世紀頃に活動. 新約聖書の福音書にイエスを敵対視する保守勢力として登場. イエスに「偽善な律法学者」と呼ばれ, 非難された.}] --律法原理主義型
 
 			律法システムで決められていることを最重要視する. ここで言う律法システムとは熊野寮内のルールや伝統的原則を指す. 具体的には徹底討論の原則, ブロック会議から代議員会を経て寮生大会に至る議案の検証システム等がそれらに当たる.
 
@@ -1898,7 +1884,7 @@
 
 			上記の考え方は法治国家の理念にも通じ, 秩序志向性が強い. しかし, 律法の形骸化など, 律法システムの欠陥が顕わになった時に迅速な対応ができない傾向がある. このような律法システムの抱える問題の顕在化はしばしば発生するものであり, 律法システムへの固執が集団を疲弊させてしまう虞もある. パリサイ派はしばしば第三章の「メタ論者(後述) 」でもある.
 
-			\item[2. アジテーター] \footnote{アジテーションとは強い調子の文章や演説などによって人々の気持ちをあおり, ある行動を起こすようにしむけること.  扇動. (以上, goo国語辞典より引用) アジテーターはアジテーションをする人のこと. } --結果良ければすべて良し型
+			\item[2. アジテーター \footnote{アジテーションとは強い調子の文章や演説などによって人々の気持ちをあおり, ある行動を起こすようにしむけること.  扇動. (以上, goo国語辞典より引用) アジテーターはアジテーションをする人のこと. }] --結果良ければすべて良し型
 
 			その場の議論でアジテーター自身が考える最善の結論を出すことを最重要視する. 「最善の結論」のためなら過去の議論の積み重ねや律法の要請を無視することもいとわない. パリサイ派と対照的. アジテーターは発展性のない論点を変更できたり, パリサイ派$ \cdot $ その他の議場を疲弊させる類の論者を黙らせる力を持つ. それ故, アジテーターの主張が議場の大多数の本音を的確に代弁していることもあり, その場合は拍手喝采, 英雄的支持を得る. しかし, アジテーターの手法は扇動的であり, パリサイ派が恐れているような議場の過激化を引き起こす原因ともなり得る. パリサイ派に言わせればアジテーターはデマゴーゴス \footnote{紀元前5世紀, ペロポネソス戦争の最中にギリシアのアテネに出現した扇動政治家達の総称. デマの語源. デマゴーゴスによる大衆扇動が原因でアテネがそれまで作り上げた民主政は衆愚的状況に陥った. 結果, アテネは勝てるはずだった戦争に敗北した挙句, それ以後1000年以上に渡って衰退し続けることとなった. } に等しいだろう. なお, アジテーションに失敗したアジテーターにはさむい風が吹くこととなる.
 パリサイ派を装ったアジテーターも見られる. 君主制と相性が良い.
@@ -1919,8 +1905,6 @@
 
 			\begin{enumerate}
 
-			\renewcommand{\labelenumi}{(\alph{enumi})}
-
 			\item 合意形成は可能だ, という想定のもと合意形成作業を続行する.
 			\item その論点における合意形成を断念し, 論点を変える, 若しくは議論全体を白紙に戻す.
 			\item その論者の主張を無視することを議場に提案する.
@@ -1928,13 +1912,13 @@
 			\end{enumerate}
 
 			\end{tcolorbox}
-			(a)は対立する両者のうち少なくとも片方が頑なであれば, 徒労に終わる可能性が高い.
+			(1)は対立する両者のうち少なくとも片方が頑なであれば, 徒労に終わる可能性が高い.
 
-			(b)は議論の方法としては誠実だが, 非常に息の長い議論を覚悟せねばならない. 長い議論は長いというそれだけで議場の集中力低下$ \cdot $ 疲弊を招き, 現実問題として良い議論ができなくなることもしばしばある.
+			(2)は議論の方法としては誠実だが, 非常に息の長い議論を覚悟せねばならない. 長い議論は長いというそれだけで議場の集中力低下$ \cdot $ 疲弊を招き, 現実問題として良い議論ができなくなることもしばしばある.
 
-			(c)を採り, 反対論者の主張の抹殺に成功すれば議事進行はスムーズだが, それは最早「合意主義」ではない. アジテーターに近い立場と言えそうだ.
+			(3)を採り, 反対論者の主張の抹殺に成功すれば議事進行はスムーズだが, それは最早「合意主義」ではない. アジテーターに近い立場と言えそうだ.
 
-			(a), (b), (c)の他に「議長に判断を投げる」「多数決を採るように議場に問う」という対応も考えられる, と考える読者もいようが, まさにこれらのことを実行することの合意を取れない時に上記のア,イ,ウのいずれかを選ぶ, というフェーズに回帰してしまう.
+			(1), (2), (3)の他に「議長に判断を投げる」「多数決を採るように議場に問う」という対応も考えられる, と考える読者もいようが, まさにこれらのことを実行することの合意を取れない時に上記の(1),(2),(3)のいずれかを選ぶ, というフェーズに回帰してしまう.
 
 			数百人が参加する寮生大会で議場の合意を採る, という行為は困難であることもしばしばあり, それ故合意主義を議論の方法として正しい, と言い切ることはできないのである.
 
@@ -2186,27 +2170,18 @@
 \rightline{(文:とある寮生)}
 
 
-\chapter{FAQ -- 熊野寮生だけど質問ある?}
+\chapter{FAQ -- 熊野寮生だけど質問ある？}
 %回答者名は消すかもしれないことに注意 %許可済みリスト: さんちゃ, しんやさん, みつや, しじゅうぼう, 小寺
 熊野寮祭の企画「熊野寮生だけど質問ある?」に実際に投稿された質問と回答の中から, いくつか役に立ちそうなものをピックアップしてみました. 入寮にあたって, 気になることがあったら読んでみると解決したりしなかったりするかもしれません. なお, 掲載にあたり原文を一部改変, 省略した箇所がありますことをご了承ください.
-
-\begin{wrapfigure}{r}[10pt]{0.2\textwidth}
- 	 		\includegraphics[scale=0.8]{shitumon.pdf}
-			%%\caption{}
-			\label{fig:UT}
-			\end{wrapfigure}
 
 ここで紹介できなかった質問はウェブサイト「熊野寮生だけど質問ある?」に掲載されています. 入試期間中は質問も受け付けているので, 試験の合間の息抜きに, 暇つぶしに, ぜひ質問を投げてください. お待ちしています.
 
 \url{https://qfk.herokuapp.com}
 
-スマホをお持ちの方は右のQRコードからもどうぞ
-
 なお, \emph{入寮にあたって真面目な質問がある場合は寮に電話かメールでお問い合わせください!}
 
 		\subsection{入寮関連}
 
-		\begin{multicols}{2}
 		\begin{tcolorbox}
 		\textbf{Q. 熊野寮に入ることを両親に反対されませんでしたか? また, 反対された方は入寮することをどうやって押しきりましたか?}
 		\end{tcolorbox}
@@ -2266,12 +2241,11 @@
 
 
 
-		\end{multicols}
+
 
 
 		\subsection{生活関連}
 
-		\begin{multicols}{2}
 		\begin{tcolorbox}
 		\textbf{Q. エアコンついてますか? もしついてないなら夏はどう過ごしてますか?}
 		\end{tcolorbox}
@@ -2336,12 +2310,7 @@
 		\end{description}
 
 
-
-		\end{multicols}
-
 		\subsection{人間関係など}
-
-		\begin{multicols}{2}
 
 		\begin{tcolorbox}
 		\textbf{Q. 入寮してから寮に馴染むまで大変でしたか? 知らない人がいっぱいいる!}
@@ -2374,15 +2343,5 @@
 		\item[おで] 上下関係はゆるゆるです. むしろ, 上回生になればなるほど扱いがぞんざいになる傾向にあります.
 		\item[まえだ] 流石に敬語くらいは使う人が多いかな. めっちゃ上のOBさんとかにはかしこまるし
 		\end{description}
-
-		\end{multicols}
-
-    \newpage \subsubsection{$ \mathcal{MEMO}$ }
-
-    \newpage \subsubsection{$ \mathcal{MEMO}$ }
-
-
-
-
 
 \end{document}
