fix eqref (dont use eqref)

--- a/pamphlet-converter/pamphlet2019.tex
+++ b/pamphlet-converter/pamphlet2019.tex
@@ -1439,17 +1439,16 @@
 
 	\rightline{(文: Chageじゃないほう)}
 
-
-
   \section{シュレーディンガーの猫救出作戦ノ記録}
 
-  みなさんこんにちは. ここではせっかく \LaTeX を使っているので数式で何かやってみようと思って, なんかシュレーディンガーの猫にまつわる諸々を書いてみようと思います.
+  $\def\bra#1{\mathinner{\left\langle{#1}\right|}}$
+	$\def\ket#1{\mathinner{\left|{#1}\right\rangle}}$
+	$\def\braket#1{\mathinner{\left\langle{#1}\right\rangle}}$
+	みなさんこんにちは. ここではせっかく \LaTeX を使っているので\footnote{注：この文章はもともと \LaTeX で作成されたものを変換したものである．}数式で何かやってみようと思って, なんかシュレーディンガーの猫にまつわる諸々を書いてみようと思います.
   
   結構ざっくりした話になるのであまり正確なことは言ってませんし, 何より締め切り間際に深夜に書いているので結構間違いもあると思いますがご容赦ください. 
 
     \subsection{シュレーディンガーの猫}
-    
-   
 
     シュレーディンガーの猫について聞いたことくらいはあると思います. 簡単に説明すると, 箱の中に猫と放射性元素, 毒ガスを放出できる放射線検知器を入れておきます. 箱の中見えません. 一定時間経過後, 箱の中では確率$ 1/2 $ で放射性元素は崩壊し, 放射線を出します. このとき, 検知器が作動し毒ガスが箱の中に充満し猫は残念なことにその生涯を終えることになります. しかし, 箱の中が見えないのでフタを開けるまでは猫の生死はわかりません. これは, 猫は生きている状態と死んでいる状態の両方の状態にある, と説明されます. この猫のことをシュレーディンガーの猫と言います. そんなアホなと思うかもしれませんが,  量子論と呼ばれる物理学の分野ではこれが成立します. ちなみに箱を開けるときは換気を十分にするか防毒マスクをつけないと自分も巻き添えになりうるのでお気をつけください.
 
@@ -1457,17 +1456,23 @@
 
     \subsection{生きてもいて死んでもいる状態}
     とりあえず生きてもいて死んでいる状態, というのを定式化します. 生きている状態を数式で$ \ket{\mathrm{alive}} $ , 死んでいる状態を$ \ket{\mathrm{dead}} $ と表します. 猫の生死はそれぞれ確率 $1/2 $ であるので, 猫の状態$ \ket{\psi} $ というのは
+
     \[
     \ket{\psi} := \frac{1}{\sqrt{2}}( \ket{\mathrm{alive}}  + \ket{\mathrm{dead}} )
     \]
+
     と書けます. この$ \ket{\cdot} $ という記号は\textbf{ケット} と呼ばれる記号です. よくわからない人はベクトルのお化けみたいなもんだと思ってください. このベクトルのノルム(大きさ)を
+
     \[
     \| \psi \|^2 := \braket{\psi | \psi}
     \]
+
     で定義します. $ \bra{\cdot} $ は\textbf{ブラ}といいます. ケットと合わせてブラケット(bracket: 括弧の意)です. このブラケット$ \braket{\cdot | \cdot } $ でブラとケットの内積を表します. また, 状態を表すベクトルは大きさが1であること, つまり$ \|\mathrm{alive}\|^2 = \braket{\mathrm{alive}|\mathrm{alive} } = 1 $ を要求します. 死亡状態dead も同様のことが成り立ちます. 同時に成り立たない状態は実現しないので, $ \braket{\mathrm{alive}|\mathrm{dead} } = \braket{\mathrm{dead}|\mathrm{alive} }  =0$ が成り立ちます. 以上の計算法則を用いて, 生きている確率と死んでいる確率はどちらも
+
     \[
     | \braket{\psi | \mathrm{alive} } | ^2 = | \braket{\psi | \mathrm{dead} } |^2= \frac{1}{2}
     \]
+
     と計算できるので, この定式化はどうやら正しそうな気がします. これを用いると, $ \braket{\psi | \psi} = 1 $ もわかります. 何が何だかさっぱりですね. まぁとりあえず猫の状態はがなんとか定式化できたとだけ認識してもらえばいいんじゃないでしょうかね.
 
     要するにとりあえず猫はこのままでは殺されてしまいます. ここから救出の算段を立てます.
@@ -1481,22 +1486,30 @@
     $ \mathscr{H} $ をヒルベルト空間とし, $ \psi (t) \in \mathscr{H} $ とします. さらに系の初期状態を$ \psi_{0} := \psi (0)  $とし, $H$ を$ \mathscr{H} $ 上に作用するハミルトニアンとします. このとき,  系の時間発展は$ \psi (t) = e^{-iHt}  \psi_{0}  $と表せます. ちなみに$ \hbar = 1 $ となるような単位系を用いています.
 
     ここまで準備したところで時間を止める本題です. 「時間が止まる」というのは, 「一定時間経過した後も最初と同じ状態のままである」と言い換えることが出来ます. 上の節で言った通り, $  \tau $ だけ時間発展した後に初期状態となる確率\footnote{「初期状態が生き残る」という意味でこの確率を生存確率(survival probability)という} $ p(\tau) $ は,
+
     \[
     p(\tau) := | \braket{\psi_{0} | \psi (\tau )} | ^2 = | \braket{\psi_{0} |  e^{-iH\tau}  \psi_{0}}| ^2
     \]
+
     と書けます. $ \tau $ が極めて短い時間であるとき, この時間発展の作用素はテイラー展開することが出来て, なんかとりあえず程々にがんばって色々と計算すると
     $  (\Delta H ) ^2 := \braket{\psi_{0} |H^2 \psi_{0}} - \braket{\psi_{0} |H \psi_{0}}^2$ として
+
     \[
-    p(\tau) = 1 - (\Delta H ) ^2 \tau ^2 + O(\tau^4)
+    \mathinner{p(\tau) = 1 - (\Delta H ) ^2 \tau ^2 + O(\tau^4)}
     \]
+
     となります. さて, 有限時間$ t $ 経過した後の生存確率は時間$ \tau $ の時間発展を$ n $ 回繰り返したと考えて $ t = n \tau $ として計算します. このとき,  $ p(t) = p(n \tau ) = p(\tau) ^n $ が成立するので, 結局,
-    \begin{equation} \label{eq:sp}
-    p(t) =  (1 - (\Delta H ) ^2 \tau ^2 + O(\tau^4))^n
-    \end{equation}
-    が生存確率です. $t$ を定数(与えられた有限時間)とすると, $ n $ を大きくすることで $ \tau $ を小さく出来る, つまり極めて短い時間の測定をたくさん繰り返していることを意味します. \eqref{eq:sp}で$ n \to \infty $ の極限をとると,
+
     \[
-    (1 - (\Delta H ) ^2 \tau ^2 + O(\tau^4))^n  \to 1
+    \mathinner{p(t) =  (1 - (\Delta H ) ^2 \tau ^2 + O(\tau^4))^n \label{eq:sp}}
     \]
+
+    が生存確率です. $t$ を定数(与えられた有限時間)とすると, $ n $ を大きくすることで $ \tau $ を小さく出来る, つまり極めて短い時間の測定をたくさん繰り返していることを意味します. 式(6)で$ n \to \infty $ の極限をとると,
+
+    \[
+    \mathinner{(1 - (\Delta H ) ^2 \tau ^2 + O(\tau^4))^n  \to 1}
+    \]
+
     なので, 生存確率は1となって初期状態が確率1で再現する(時間発展が抑制されている)ことがわかります.
 
     長くなりましたが, 私たちは時間を止める魔法を定式化することに成功しました. 果たしてこれでシュレーディンガーの猫は救えるのでしょうか?
@@ -1744,7 +1757,7 @@
 		\small
 		\emph{注) 以下の話は架空の話です. 実在するいかなる組織$ \cdot $ 団体$ \cdot $ 人物に一切の関係がない...わけがないですが, 誰かを貶める意図はありません. }
 
-		20XX年M月N日(金)午後9時, 熊野寮食堂で「昼の寮食\footnote{\ref{subsec:data}(基本データ)や\ref{sec:cafeteria}(寮食堂と寮生)などを参照. 昼の寮食に週一でカレーライスまたはハヤシライスが出るというのは事実. また, 熊野寮食堂は会議などを行う多目的スペースでもある. }のメニューに出されるカレーライスとハヤシライスの頻度$ \cdot $ 比率の決定」という議論が行われようとしていた.
+		20XX年M月N日(金)午後9時, 熊野寮食堂で「昼の寮食\footnote{\url{/chapters/寮での生活.html}などを参照. 昼の寮食に週一でカレーライスまたはハヤシライスが出るというのは事実. また, 熊野寮食堂は会議などを行う多目的スペースでもある. }のメニューに出されるカレーライスとハヤシライスの頻度$ \cdot $ 比率の決定」という議論が行われようとしていた.
 
 		この日は年2回の寮生大会の日である. 寮生大会は熊野寮の最高意思決定機関であるので, 寮の重要な方針の決定もしばしば行われる. しかし, 今回の寮生大会で出された議題は上記の凡庸極まりない議題ただ一つであった.
 
