--- a/pamphlet-converter/pamphlet2019.tex
+++ b/pamphlet-converter/pamphlet2019.tex
@@ -101,8 +101,6 @@
 \vspace{-40pt}
 ]
 
-
-
 % 余白の大きさを決める. 
 \usepackage[top=30truemm, bottom=20truemm, left=20truemm, right=20truemm]{geometry}
 
@@ -1426,7 +1424,7 @@
 		って感じなので, もしも頑張って合格した大学であんまりうまくいかなくても, 悲観せず, 悩み過ぎずに自分のペースで生きていきましょう. 今は特に参考にならないと思いますが, いつか必要になるかもしれない誰かに宛てて綴りました.
         ようこそ京都大学へ, ようこそ熊野寮へ. あなたの大学生活と寮生活が, 喜びと彩りに溢れたものになりますように.
 
-\rightline{(mtmt)}
+{\bf (mtmt)}
 
 	\section{$<陳謝>$ タイトル思いつきませんでした} %荒瀬のやつ
 	入寮パンフに何か書きたいなーってぼんやり思いつつ何もアクション起こさずにいたら「卒寮予定の立場からなんか書いてほしい」ってちょうど言われたので喜びいさんで書いてます. というわけで, 2019年3月で卒業(卒寮)予定の人です(頑張ってあと2単位取ります).
@@ -1437,25 +1435,22 @@
 
 	何か短くまとめようとしたのに長くなってしまった. とにかく, ある意味クセの強い空間で, 合わない人がいることは認めます. すぐ退寮しちゃう人も結構いるし. でもこの冗長な文章を読んでくれるくらい優しくて暇を持て余した人なら大丈夫だと思うので, 入寮予備軍のあなたは是非. 私を探し出して「パンフ読みました! 」って言ってくれたらご飯ぐらい奢りますよ. お金なかったら人違いですって言うけど.
 
-	\rightline{(文: Chageじゃないほう)}
+	{\bf (文: Chageじゃないほう)}
 
   \section{シュレーディンガーの猫救出作戦ノ記録}
 
-  $\def\bra#1{\mathinner{\left\langle{#1}\right|}}$
-	$\def\ket#1{\mathinner{\left|{#1}\right\rangle}}$
-	$\def\braket#1{\mathinner{\left\langle{#1}\right\rangle}}$
-	みなさんこんにちは. ここではせっかく \LaTeX を使っているので\footnote{注：この文章はもともと \LaTeX で作成されたものを変換したものである．}数式で何かやってみようと思って, なんかシュレーディンガーの猫にまつわる諸々を書いてみようと思います.
+  $\def\bra#1{\mathinner{\left\langle{#1}\right|}}\def\ket#1{\mathinner{\left|{#1}\right\rangle}}\def\braket#1{\mathinner{\left\langle{#1}\right\rangle}}$みなさんこんにちは. ここではせっかく \LaTeX を使っているので\footnote{注：この文章はもともと \LaTeX で作成されたものを変換したものである．}数式で何かやってみようと思って, なんかシュレーディンガーの猫にまつわる諸々を書いてみようと思います.
   
   結構ざっくりした話になるのであまり正確なことは言ってませんし, 何より締め切り間際に深夜に書いているので結構間違いもあると思いますがご容赦ください. 
 
     \subsection{シュレーディンガーの猫}
 
-    シュレーディンガーの猫について聞いたことくらいはあると思います. 簡単に説明すると, 箱の中に猫と放射性元素, 毒ガスを放出できる放射線検知器を入れておきます. 箱の中見えません. 一定時間経過後, 箱の中では確率$ 1/2 $ で放射性元素は崩壊し, 放射線を出します. このとき, 検知器が作動し毒ガスが箱の中に充満し猫は残念なことにその生涯を終えることになります. しかし, 箱の中が見えないのでフタを開けるまでは猫の生死はわかりません. これは, 猫は生きている状態と死んでいる状態の両方の状態にある, と説明されます. この猫のことをシュレーディンガーの猫と言います. そんなアホなと思うかもしれませんが,  量子論と呼ばれる物理学の分野ではこれが成立します. ちなみに箱を開けるときは換気を十分にするか防毒マスクをつけないと自分も巻き添えになりうるのでお気をつけください.
+    シュレーディンガーの猫について聞いたことくらいはあると思います. 簡単に説明すると, 箱の中に猫と放射性元素, 毒ガスを放出できる放射線検知器を入れておきます. 箱の中見えません. 一定時間経過後, 箱の中では確率$ \mathinner{1/2} $ で放射性元素は崩壊し, 放射線を出します. このとき, 検知器が作動し毒ガスが箱の中に充満し猫は残念なことにその生涯を終えることになります. しかし, 箱の中が見えないのでフタを開けるまでは猫の生死はわかりません. これは, 猫は生きている状態と死んでいる状態の両方の状態にある, と説明されます. この猫のことをシュレーディンガーの猫と言います. そんなアホなと思うかもしれませんが,  量子論と呼ばれる物理学の分野ではこれが成立します. ちなみに箱を開けるときは換気を十分にするか防毒マスクをつけないと自分も巻き添えになりうるのでお気をつけください.
 
     さて, 誰が好きで猫をこんな酷い目に合わせようと思うでしょうか. ちなみに私自身は猫アレルギーなので別に絶滅してもらっても構わないとは思いますが, そう思う人はきっと少数派なのでここは多数派に従って量子力学的に猫を救出する方法を考察してみます. その上で猫は可愛い.
 
     \subsection{生きてもいて死んでもいる状態}
-    とりあえず生きてもいて死んでいる状態, というのを定式化します. 生きている状態を数式で$ \ket{\mathrm{alive}} $ , 死んでいる状態を$ \ket{\mathrm{dead}} $ と表します. 猫の生死はそれぞれ確率 $1/2 $ であるので, 猫の状態$ \ket{\psi} $ というのは
+    とりあえず生きてもいて死んでいる状態, というのを定式化します. 生きている状態を数式で$ \ket{\mathrm{alive}} $ , 死んでいる状態を$ \ket{\mathrm{dead}} $ と表します. 猫の生死はそれぞれ確率 $ \mathinner{1/2} $ であるので, 猫の状態$ \ket{\psi} $ というのは
 
     \[
     \ket{\psi} := \frac{1}{\sqrt{2}}( \ket{\mathrm{alive}}  + \ket{\mathrm{dead}} )
@@ -1483,28 +1478,28 @@
     このZeno効果を定式化します. 簡単に説明するのは不可能なので, よくわからんって人は諦めて次節まで読み飛ばしてください.
 
     \subsubsection{射影測定によるZeno効果の定式化}
-    $ \mathscr{H} $ をヒルベルト空間とし, $ \psi (t) \in \mathscr{H} $ とします. さらに系の初期状態を$ \psi_{0} := \psi (0)  $とし, $H$ を$ \mathscr{H} $ 上に作用するハミルトニアンとします. このとき,  系の時間発展は$ \psi (t) = e^{-iHt}  \psi_{0}  $と表せます. ちなみに$ \hbar = 1 $ となるような単位系を用いています.
+    $ \mathinner{\mathscr{H}} $ をヒルベルト空間とし, $ \mathinner{\psi (t) \in \mathscr{H}} $ とします. さらに系の初期状態を$ \mathinner{\psi_{0} := \psi (0)}  $とし, $\mathinner{H}$ を$ \mathinner{\mathscr{H}} $ 上に作用するハミルトニアンとします. このとき,  系の時間発展は$ \mathinner{\psi (t) = e^{-iHt}  \psi_{0}}  $と表せます. ちなみに$ \mathinner{\hbar = 1} $ となるような単位系を用いています.
 
-    ここまで準備したところで時間を止める本題です. 「時間が止まる」というのは, 「一定時間経過した後も最初と同じ状態のままである」と言い換えることが出来ます. 上の節で言った通り, $  \tau $ だけ時間発展した後に初期状態となる確率\footnote{「初期状態が生き残る」という意味でこの確率を生存確率(survival probability)という} $ p(\tau) $ は,
+    ここまで準備したところで時間を止める本題です. 「時間が止まる」というのは, 「一定時間経過した後も最初と同じ状態のままである」と言い換えることが出来ます. 上の節で言った通り, $ \mathinner{\tau} $ だけ時間発展した後に初期状態となる確率\footnote{「初期状態が生き残る」という意味でこの確率を生存確率(survival probability)という} $ \mathinner{p(\tau)} $ は,
 
     \[
     p(\tau) := | \braket{\psi_{0} | \psi (\tau )} | ^2 = | \braket{\psi_{0} |  e^{-iH\tau}  \psi_{0}}| ^2
     \]
 
-    と書けます. $ \tau $ が極めて短い時間であるとき, この時間発展の作用素はテイラー展開することが出来て, なんかとりあえず程々にがんばって色々と計算すると
+    と書けます. $ \mathinner{\tau} $ が極めて短い時間であるとき, この時間発展の作用素はテイラー展開することが出来て, なんかとりあえず程々にがんばって色々と計算すると
     $  (\Delta H ) ^2 := \braket{\psi_{0} |H^2 \psi_{0}} - \braket{\psi_{0} |H \psi_{0}}^2$ として
 
     \[
     \mathinner{p(\tau) = 1 - (\Delta H ) ^2 \tau ^2 + O(\tau^4)}
     \]
 
-    となります. さて, 有限時間$ t $ 経過した後の生存確率は時間$ \tau $ の時間発展を$ n $ 回繰り返したと考えて $ t = n \tau $ として計算します. このとき,  $ p(t) = p(n \tau ) = p(\tau) ^n $ が成立するので, 結局,
+    となります. さて, 有限時間$ \mathinner{t} $ 経過した後の生存確率は時間$ \mathinner{\tau} $ の時間発展を$ \mathinner{n} $ 回繰り返したと考えて $ \mathinner{t = n \tau} $ として計算します. このとき,  $ \mathinner{p(t) = p(n \tau ) = p(\tau) ^n} $ が成立するので, 結局,
 
     \[
     \mathinner{p(t) =  (1 - (\Delta H ) ^2 \tau ^2 + O(\tau^4))^n \label{eq:sp}}
     \]
 
-    が生存確率です. $t$ を定数(与えられた有限時間)とすると, $ n $ を大きくすることで $ \tau $ を小さく出来る, つまり極めて短い時間の測定をたくさん繰り返していることを意味します. 式(6)で$ n \to \infty $ の極限をとると,
+    が生存確率です. $\mathinner{t}$ を定数(与えられた有限時間)とすると, $ \mathinner{n} $ を大きくすることで $ \mathinner{\tau} $ を小さく出来る, つまり極めて短い時間の測定をたくさん繰り返していることを意味します. 式(6)で$ \mathinner{n \to \infty} $ の極限をとると,
 
     \[
     \mathinner{(1 - (\Delta H ) ^2 \tau ^2 + O(\tau^4))^n  \to 1}
@@ -1522,13 +1517,13 @@
     \subsection{まとめ}
     今までの議論を素朴に信じると, 猫が死なないということは放射性元素が崩壊していないことを意味します. 箱の中の猫を眺めることで元素の崩壊を止められるなんてありえるんでしょうか?
 
-    ---もちろん, そんなことはありません. 猫は死ぬときは死にます. 箱に覗き窓をつけたところで, 確率$ 1/2 $ で猫の断末魔を目の当たりにするだけです. 多分トラウマになるのでやらないほうがいいと思います. なんでこんなパラドックスが起きるのか, それはミクロな世界の物理学である量子論を安易にマクロな系(猫)に適用したことに原因があります. 見つめられたら動けなくなるというのは, 確かにラブソングの中の美人(またはイケメン)くらいしか出来ないようです. もしくはメデューサ.
+    ---もちろん, そんなことはありません. 猫は死ぬときは死にます. 箱に覗き窓をつけたところで, 確率$ \mathinner{1/2} $ で猫の断末魔を目の当たりにするだけです. 多分トラウマになるのでやらないほうがいいと思います. なんでこんなパラドックスが起きるのか, それはミクロな世界の物理学である量子論を安易にマクロな系(猫)に適用したことに原因があります. 見つめられたら動けなくなるというのは, 確かにラブソングの中の美人(またはイケメン)くらいしか出来ないようです. もしくはメデューサ.
 
     実際, 量子論には色々とデリケートな問題がついて回ります. Zeno効果にも実はまだまだ色々と条件があるし, シュレーディンガーの猫そのものも実はそんなに単純な話じゃなかったりします. こういう問題は難しいですが, これからの技術, 例えば量子情報などを支える理論における重要な問いになっています. もし興味があったら大学で勉強してみてください. その土壌が京都大学にはあります.
 
     \emph{結論, 猫を助けたければ箱の中に入れなきゃいい.}
 
-		\rightline{(文: まつたけ)}
+		{\bf (文: まつたけ)}
 
 	\section{元寮生の声 ---寮生活を振り返って}
 	 はじめに, 私は面白い文章も書けないし, 君は真面目枠だと言われたので, ただただ私の寮生活について書きます. 面白い話が聞きたい人は読み飛ばしてください.
@@ -1545,7 +1540,7 @@
 
 	まとめると, 熊野寮はいろんな人がいて, なんでもできるところです. 面白い話もたくさん聞けるし, 困ったら誰かが助けてくれます. 不安なことが多いと思いますが, 興味を持ったらぜひ! 覗きに行ってみてください.
 
-\rightline{(文: min)}
+{\bf (文: min)}
 
 \newpage
 
@@ -1565,7 +1560,7 @@
   \end{center}
 		\end{figure}
 
-    \rightline{(文:さわ)}
+    {\bf (文:さわ)}
 
 	\section{寮食と寮生活}
 
@@ -1600,7 +1595,7 @@
 
 		来年は1位を目指します. 新入寮生の諸君も頑張ってくれたまえ.
 
-\rightline{(文:寮食クイズ2位)}
+{\bf (文:寮食クイズ2位)}
 
     \section{てんと生活のすすめ}
 
@@ -1630,7 +1625,7 @@
 
     窮屈なんじゃないの? と思っているあなた!そんなことはあります. だがそれがなんだ!四年間このテントで生活した私は, 寝返りゼロで寝る能力を手に入れました. まさに直立不動の姿勢で寝れるわたし. これがソリューション!レッツ熊野寮!
 
-    \rightline{(文:マリファナは中毒性がない)}
+    {\bf (文:マリファナは中毒性がない)}
 
 
 
@@ -1658,7 +1653,7 @@
 
 	この物語は, 諸君が熊野寮に入寮するまではフィクションである.
 
-\rightline{(文: 仏子)}
+{\bf (文: 仏子)}
 
 
 	\section{ミール奴隷解放宣言 ! !}
@@ -1680,7 +1675,7 @@
 		...熊野寮の寮食だって「寮食奴隷」なんじゃないかって?
 それがそうじゃないんだな. 寮食は食券を買って使うから毎食食べなくても損はしない! だから安心して寮食を食べよう! ! !
 
-\rightline{ (文: 元ミール奴隷)}
+{\bf  (文: 元ミール奴隷)}
 
 %\section{寮とお酒}
 
@@ -1735,7 +1730,7 @@
 
 		ちょっと難しいことを書いたと思われるかもしれませんが, 文責者はここまで読んでくれたあなたが熊野寮に入寮されることを歓迎します. 熊野寮の外では得難かったたくさんのことを, 私は熊野寮で得ることができました. ここまで読んでくださったあなたの学生生活延いては人生が, 熊野寮に入ることで面白くなりますように. そして何より, 合格されますように.
 
-		\rightline{(文: krhrkrhr)}
+		{\bf (文: krhrkrhr)}
 
 
 
@@ -2027,7 +2022,7 @@
 
 		終わり
 
-		\rightline{(文: 理学部ｎ回生 ブヤコフ$=$マクシモヴィッチ)}
+		{\bf (文: 理学部ｎ回生 ブヤコフ$=$マクシモヴィッチ)}
 
 
 
@@ -2046,7 +2041,7 @@
 
 		最後に, これを読んでサルに会いたくなったそこのあなたに嬉しいお知らせ! 京都の超有名観光地\textbf{嵐山モンキーパークいわたやま}, 春に行けばもうすぐ1歳になるかわいい盛りの赤ちゃんがたくさん見られます! 今年はなんかめっちゃ生まれたらしい. モンキーパークは熊野寮から丸太町を西に, 自転車で片道1時間. バスだと30分. ぜひ行ってみてね!
 
-\rightline{(文: kmmk)}
+{\bf (文: kmmk)}
 
 		\section{ベルギー人Aの雑記} %書いたの誰? →アドでした
 		If someone were to ask me to sum up Kumanoryou in a word, I'd tell them such a word was not yet invented. And even if it had been, one would most likely be unable to make a mental picture at the mention of it. To me, it's the only place I really feel at home in the whole of japan, or at least the only place that I can call a community.
@@ -2055,7 +2050,7 @@
 
 		I could write a book about all of the strange experiences, and stranger friends, I gained here, but as I mentioned before, words do not suffice to describe the glamour and splendor of this old dorm.
 
-\rightline{(文: とある居候)}
+{\bf (文: とある居候)}
 
 
 		\section{熊野寮, やべえよやべえよ}
@@ -2098,7 +2093,7 @@
 			熊野寮の自治は寮生の不断の意識性によって半世紀にわたって維持されてきたにゃん. 意識性が大事にゃん. 寮に入ったら(或いは入らなくても) みんなで大学当局との交渉に行き, 社会の現実を目撃し, 政治的経験を積むにゃん. 生活力が付くにゃん.
 次の発言者は, キミだにゃん
 
-\rightline{(文: TKT)}
+{\bf (文: TKT)}
 
 
 		\section{ある自称: 一般女子寮生の声}
@@ -2121,7 +2116,7 @@
 
 		熊野寮生は新入寮生を絶賛募集中でございます. 楽しくカオスな生活が貴方を待っています. 来たれ熊野寮へ!
 
-\rightline{(文: 総合人間学部新2回生, 女子)}
+{\bf (文: 総合人間学部新2回生, 女子)}
 
 		\section{受験生へ宛てて}
 
@@ -2140,7 +2135,7 @@
 
 		最後に, これまで書いてきたことはすべて筆者の主観によるものです. 実際に入寮して確かめてみてください. それから, おいしいカレー屋さんを見つけたらおしえてね.
 
-\rightline{(文:とある寮生)}
+{\bf (文:とある寮生)}
 
 		\section{おすすめの下宿先熊野寮}
 
@@ -2152,7 +2147,7 @@
 
 		私は実家で家事などを一切せず超甘やかされて生きてきたので自分で出来ることはほとんどありませんでした. 親から離れて自立した生活を送らなければならないけれど, 自分でできないことは信頼できる人に頼むことができる. 初めて親元を離れる際に, ホームシックになりやすい一人暮らしではなく, 利点ばかりの寮という選択肢も加えてみてはいかがですか.
 
-\rightline{(文: 工学部一回生)}
+{\bf (文: 工学部一回生)}
 
 		\section{談話室について}
 
@@ -2180,7 +2175,7 @@
 
 		談話室のコミュニティは違います. phaさんの文章で語られるように, 談話室でだらだらしているだけで遊び相手や話し相手が見つかります. 実際, 私も大学でのコミュニティに馴染めず, 談話室民となった人間の一人です. 談話室, ひいては自治寮の優れているところは, この「自然な」コミュニティ形成にあると思います.
 
-\rightline{(文:とある寮生)}
+{\bf (文:とある寮生)}
 
 
 \chapter{FAQ -- 熊野寮生だけど質問ある？}
