fix critical tables

--- a/pamphlet-converter/pamphlet2019.tex
+++ b/pamphlet-converter/pamphlet2019.tex
@@ -302,19 +302,30 @@
 		\begin{description}
 		\item[面接日時] 面接は前期と後期の2回に分けて行われる. %複数の日程があるが, 選考については, 前期枠は3月16日, 後期枠は3月24日にまとめて行われる.
 
-\begin{table}[htb]
-  \begin{tabular}{|l|c|c|c||l|c|c|c|} \hline
-    		& 日程 & 受付時間  & 当落連絡 &	& 日程 & 受付時間 & 当落連絡 \\ \hline \hline
-    \multirow{6}{*}{前期}
-      		& 2月25日(月)& \multirow{2}{*}{15:00 $ \sim $ 17:00 }& \multirow{6}{*}{3月17日(日)} &\multirow{6}{*}{後期} & &  \multirow{6}{*}{10:00 $ \sim $ 17:00} & \multirow{6}{*}{3月25日(月)} \\
-    		& 2月26日(火)&  & & & & &\\ \cline{2-3}
-      		& 3月10日(日)&  \multirow{4}{*}{10:00 $ \sim $ 17:00}& & & 3月23日(土) & &\\
-    	  	& 3月11日(月)& & & & 3月24日(日)& &\\
-      		& 3月12日(火)& & & & & &\\
-     		& 3月16日(土)& & & & & &\\ \hline
-  \end{tabular}
-\end{table}
-
+			\begin{description}
+				\item[前期日程]
+					\begin{table}[]
+					\begin{tabular}{|c|c|c|}
+					\hline
+					日程       & 受付時間          & 当落連絡     \\ \hline
+					2月25日(月) & 15:00 〜 17:00 & 3月17日(日) \\ \hline
+					2月26日(火) & 15:00 〜 17:00 & 3月17日(日) \\ \hline
+					3月10日(日) & 10:00 〜 17:00 & 3月17日(日) \\ \hline
+					3月11日(月) & 10:00 〜 17:00 & 3月17日(日) \\ \hline
+					3月12日(火) & 10:00 〜 17:00 & 3月17日(日) \\ \hline
+					3月16日(土) & 10:00 〜 17:00 & 3月17日(日) \\ \hline
+					\end{tabular}
+					\end{table}
+				\item[後期日程]
+					\begin{table}[]
+					\begin{tabular}{|c|c|c|}
+					\hline
+					日程       & 受付時間          & 当落連絡     \\ \hline
+					3月23日(土) & 10:00 〜 17:00 & 3月25日(月) \\ \hline
+					3月24日(日) & 10:00 〜 17:00 & 3月25日(月) \\ \hline
+					\end{tabular}
+					\end{table}
+			\end{description}
 
 %表の記述は改善の余地あり
 		\item[所要時間] $1 \sim 2 $ 時間
@@ -339,7 +350,7 @@
 			\begin{table}[h]
 \begin{tabular}{|l|l|c|l|c|}
 \hline
-\multicolumn{2}{|c|}{受付日} & 曜日  & \multicolumn{2}{|c|}{受付時間}                  \\ \hline \hline
+受付日        &      受付日 & 曜日 & 受付時間 & 受付時間                 \\ \hline \hline
 18日         & 25日        & 月 & 9:45 $ \sim $ 12:45 & $ \times $           \\ \hline
 19日         & 26日        & 火 & 9:45 $ \sim $ 12:45 & 14:00 $ \sim $ 15:30 \\ \hline
 20日         & 27日        & 水 & 9:45 $ \sim $ 12:45 & $ \times $           \\ \hline
