--- a/pamphlet-converter/pamphlet2019.tex
+++ b/pamphlet-converter/pamphlet2019.tex
@@ -432,25 +432,26 @@
 
 		\subsection{寮食メニュー例}
 
-\begin{table}[htb]
-\begin{tabular}{|c|c|c|c|c|c|} \hline
-&月&火&水&木&金 \\ \hline \hline
-朝食& \multicolumn{5}{|c|}{パン, 乳酸飲料, チーズor卵} \\  \hline \hline
-\multirow{6}{*}{昼食} & チキンカツ丼 &カレーピラフ & ハヤシライス & 柳川風丼 & 桜寿司 \\
-&&サラダ	&ヨーグルトサラダ&ごま和え&ごま和え \\
-&&コーンスープ&&&かき卵汁 \\  \cline{2-6}
-&&長崎ちゃんぽん&&&にしんそば \\
-&&&&&ごま和え \\  \cline{2-6}
-&\multicolumn{5}{|c|}{火曜と金曜は2種から選べます} \\  \hline \hline
-\multirow{6}{*}{夕食}&豚肉の和風焼き& 豆腐ハンバーグ& 鶏肉の香草焼き& とんかつ& いわしの塩焼き \\
-&せんきゃべつ&せんきゃべつ&せんきゃべつ&せんきゃべつ& せんきゃべつ \\
-&里芋の煮物& じゃがいもの金平& ひじきの炒め物	& 小松菜としめじの煮浸し& 肉じゃが \\
-&ピーナツ和え& ほうれん草のソテー& ゆかり和え& カレー酢和え& お浸し\\
-&すまし汁& みそ汁& すまし汁& みそ汁& すまし汁 \\ \cline{2-6}
-&\multicolumn{5}{|c|}{※夕飯には毎食ご飯がつきます} \\ \hline
-\end{tabular}
-\end{table}
-
+		\begin{description}
+			\item[朝食] パン, 乳酸飲料or牛乳, チーズor卵．パンの種類は日によって変わります．
+			\item[昼食] 火曜日と金曜日は，2種類のメニューから好きな方を選べます．
+				\begin{table}[]
+				\begin{tabular}{|c|c|c|c|c|}
+				\hline
+				月      & 火                   & 水                & 木          & 金               \\ \hline
+				チキンカツ丼 & カレーピラフ, サラダ, コーンスープ & ハヤシライス, ヨーグルトサラダ & 柳川風丼, ごま和え & 桜寿司, ごま和え, かき卵汁 \\ \hline
+							& 長崎ちゃんぽん             &                  &            & にしんそば, ごま和え     \\ \hline
+				\end{tabular}
+				\end{table}
+			\item[夕食] 夕食には毎食ご飯がつきます．
+				\begin{table}[]
+				\begin{tabular}{|c|c|c|c|c|}
+				\hline
+				月                                    & 火                                         & 水                                     & 木                                      & 金                                \\ \hline
+				豚肉の和風焼き, せんきゃべつ, 里芋の煮物, ピーナツ和え, すまし汁 & 豆腐ハンバーグ, せんきゃべつ, じゃがいもの金平, ほうれん草のソテー, みそ汁 & 鶏肉の香草焼き, せんきゃべつ, ひじきの炒め物, ゆかり和え, すまし汁 & とんかつ, せんきゃべつ, 小松菜としめじの煮浸し, カレー酢和え, みそ汁 & いわしの塩焼き, せんきゃべつ, 肉じゃが, お浸し, すまし汁 \\ \hline
+				\end{tabular}
+				\end{table}
+		\end{description}
 
 \newpage
 
