--- a/pamphlet-converter/pamphlet2019.tex
+++ b/pamphlet-converter/pamphlet2019.tex
@@ -589,10 +589,10 @@
 \newpage
 
 	\section{熊野寮祭 ---厳冬の奇祭}
-			\subsubsection{弁明}
+			\subsection{弁明}
 			こんにちは. 2018年熊野寮祭実行員長です. この章を読んでいるみなさんにまず弁解なんですが, この文章はコミケ(初参加) の入場待ちの列で寒空のもと, 締め切りに追われて書いたものです. 寒すぎれ指取れそうでした. ゆりかもめ混みスギィ! だから不正確な情報に基づいた記述に基づいたものになるかも知れませんが許して欲しいです. 弁明は以上です.
 
-			\subsubsection{自治と自由とそれからあなた, みんなとがってみんないい}
+			\subsection{自治と自由とそれからあなた, みんなとがってみんないい}
 			まず簡単に熊野寮祭の定番企画を紹介してみなさんの度肝を抜いておきます.
 			\begin{description}
 			\item[鴨川いかだレース] 12月の鴨川を自作のいかだ(突貫工事で作成) で渡る. いかだが壊れたら泳ぐ.
